--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,10 @@ html, body {
     padding-bottom: 70px; /* Extra padding for bottom bar */
 }
 
-#indexDropdown {
+.indexDrop {
     padding-left: 2%;
-    width: 10%; /* Make it responsive by setting width to 100% */
-    max-width: 10%; /* Add a max-width to prevent it from becoming too wide */
+    width: 25%; /* Make it responsive by setting width to 100% */
+    max-width: 25%; /* Add a max-width to prevent it from becoming too wide */
 }
 
 .mr-2 {
